force-app/main/default/objects/IOM_Amendment_Category_Detail__mdt/IOM_Amendment_Category_Detail__mdt.object-meta.xml
<CustomObject>
    <description>IOM Amendment Category Detail</description>
    <label>IOM Amendment Category Detail</label>
    <pluralLabel>IOM Amendment Category Details</pluralLabel>
</CustomObject>