force-app/main/default/objects/IOM_Amendment_Category_Detail__mdt/fields/IOM_Description__c.field-meta.xml
<CustomField>
    <fullName>IOM_Description__c</fullName>
    <description>Amendment Category Description</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>