force-app/main/default/objects/IOM_Amendment_Category_Detail__mdt/fields/IOM_New_Label__c.field-meta.xml
<CustomField>
    <fullName>IOM_New_Label__c</fullName>
    <description>Amendment Category Label</description>
    <label>New Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>