force-app/main/default/objects/IOM_Amendment_Category_Detail__mdt/fields/IOM_Priority__c.field-meta.xml
<CustomField>
    <fullName>IOM_Priority__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Priority order to process the amendment request</description>
    <label>Priority</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>