force-app/main/default/objects/IOM_Amendment_Category_Detail__mdt/fields/IOM_Type__c.field-meta.xml
<CustomField>
    <fullName>IOM_Type__c</fullName>
    <description>Amendment Category Type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reprint Invoice Change Detail</fullName>
                <default>true</default>
                <label>Reprint Invoice Change Detail</label>
            </value>
            <value>
                <fullName>Full Cancel &amp; Rebill</fullName>
            </value>
            <value>
                <fullName>Full Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>