force-app/main/default/objects/IOM_Amendment_Category_Detail__mdt/listViews/All_Detail.listView-meta.xml
<ListView>
    <fullName>All_Detail</fullName>
    <columns>MasterLabel</columns>
    <columns>IOM_Type__c</columns>
    <columns>IOM_New_Label__c</columns>
    <columns>IOM_Priority__c</columns>
    <columns>IOM_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>